syntax = "proto3";

package core;

option java_package = "com.windchat.proto.core";
option java_outer_classname = "ConfigProto";

// options for php
//// option php_namespace = "Akaxin\\Proto\\Core";

//实名枚举
enum RealNameConfig {
    REALNAME_NO     = 0; //匿名方式
    REALNAME_YES    = 1; //实名方式,必须用户是实名
    REALNAME_YES_NO = 2; //优先实名方式，其次接受非实名用户
}

//邀请码枚举
enum InviteCodeConfig {
    UIC_NO  = 0; //不需要
    UIC_YES = 1; //关闭邀请码
}

//站点开启，关闭状态
enum SiteStatusConfig {
    CLOSE   = 0; //站点关闭状态
    OPEN    = 1; //站点开启状态
}

//二人加密状态枚举
enum U2EncryptionConfig {
    U2_CLOSE    = 0; //二人加密关闭
    U2_OPEN     = 1; //二人加密开启
}

// 站点配置信息
message SiteConfig {
    string  site_address    = 1; //站点ip
    int32   site_port       = 2; //站点地址
    string  site_name       = 3; //站点名称
    string  site_logo       = 4; //站点logo
    string  site_version    = 5; //站点版本
    string  site_introduction = 6; //站点介绍

    RealNameConfig real_name_config = 7; //站点是否需要实名
    string pic_size = 8; //支持图片大小（width x length）

    SiteStatusConfig site_status_config = 9; //站点状态
    string site_status_info = 10; //站点状态说明，一般关闭站点情况使用

    U2EncryptionConfig u2_encryption_config = 11; //二人消息加密状态
    InviteCodeConfig invite_code_config = 12; //站点注册是否需要邀请码
}

//站点后台管理配置
message SiteBackConfig {
    map <int32, string> site_config = 1;
}

//站点后台管理配置key
enum ConfigKey {
    SITE_ADDRESS = 0;   //站点地址
    SITE_PORT = 1;      //站点端口
    SITE_NAME = 2;      //站点名称
    SITE_LOGO = 3;      //站点logo
    SITE_VERSION = 4;   //站点版本
    SITE_INTRODUCTION = 5; //站点介绍

    REALNAME_STATUS = 6; //实名状态
    GROUP_MEMBERS_COUNT = 7; //站点支持群最大成员数

    PIC_SIZE = 8; //站点图片支持最大尺寸
    PIC_PATH = 9; //站点图片存放位置

    SITE_STATUS = 10; //站点状态，站点关闭(status=0)/站点开启(status=1)
    SITE_STATUS_INFO = 11; //站点关闭情况下，需要一个说明

    SITE_ADMIN = 12; //站点超级管理员，唯一一个用户

    SITE_HTTP_ADDRESS = 13; //站点http服务地址
    SITE_HTTP_PORT = 14; //站点http服务地址ip

    U2_ENCRYPTION_STATUS = 15; //二人消息绝密功能是否开启
    DB_PATH = 16; //数据库路径
    PUSH_CLIENT_STATUS = 17; //PushClientStatus
    LOG_LEVEL = 18; //系统的日志级别 DEBUG/INFO/ERROR
    SITE_MANAGER = 19; //站点管理员，多个用户，用“,”隔开
    INVITE_CODE_STATUS = 20; //邀请码状态

    DEFAULT_USER_FRIENDS = 21; //默认添加的用户好友
    DEFAULT_USER_GROUPS = 22; //默认添加的用户群组
}

//站点发送PUSH给客户端的三种状态
enum PushClientStatus {
    PUSH_NO = 0; //站点不发送push给客户端
    PUSH_HIDDEN_TEXT    = 1; //站点发送PUSH不展示文本内容
    PUSH_DISPLAY_TEXT   = 2; //站点发送PUSH显示文本内容
}
