syntax = "proto3";

package site;

option java_package = "com.windchat.proto.platform";
option java_outer_classname = "ImPlatformAuthProto";

/**
 * 接口名<action_name>：
 * 		im.platform.auth
 *
 * 功能描述：
 * 		建立与平台的长连接后，先进行的AUTH操作。
 *
 * 支持的错误ID：
 * 		success						//认证成功，保持与站点之间长链接
 * 		error.alert					//认证失败
 */
service ImPlatformAuthService {
    rpc auth(ImPlatformAuthRequest) returns(ImPlatformAuthResponse);
}

message ImPlatformAuthRequest {
	string user_id = 1;		//用户个人ID ，这个地方需要使用Global User ID
	string session_id = 2;	//用户认证sessionID
}

message ImPlatformAuthResponse {
	string platform_server = 1;		//平台的地址
}
