syntax = "proto3";

package site;

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ApiSiteLoginProto";

// options for php
// option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		api.site.login
 *
 * 功能描述：
 * 		用户登陆站点
 *
 * 支持的错误ID：
 * 		success						//登陆成功
 * 		error.alert			//登陆失败，不需要注册(直接展示登陆失败界面)
 *  		error.login.need_register	//登陆失败，需要注册
 * 		error.login.needRegister 	//登陆失败，需要注册（兼容）
 */
service ApiSiteLoginService {
    rpc login (ApiSiteLoginRequest) returns (ApiSiteLoginResponse);
}

message ApiSiteLoginRequest {
	string user_id_pubk = 1; 				//用户个人身份公钥
	string user_device_id_pubk = 2; 			//用户设备公钥
	string phone_token = 3; 					//手机号授权token
	string user_device_name = 4; 			//用户设备名称
	string user_token = 5; 					//akaxin认证token
	string user_id_sign_base64 = 6; 			//用户身份公钥签名，证明公钥所属权，需要base64encode。
	string user_device_id_sign_base64 = 7; 	//使用user_id_prik对用户的user_device_id_pubk签名，证明这个设备是这个用户的。
}

message ApiSiteLoginResponse {
	string user_session_id = 1; 		//用户个人sessionId
	string site_user_id = 2; 		//返回站点用户ID
	string site_device_id = 3; 		//返回站点的设备ID
}
