syntax = "proto3";

package site;

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImSiteAuthProto";

// options for php
// option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		im.site.auth
 *
 * 功能描述：
 * 		用户退出站点
 *
 * 支持的错误ID：
 * 		success						//认证成功，保持与站点之间长链接
 * 		error.alert					//认证失败
 */
service ImSiteAuthService {
    rpc auth(ImSiteAuthRequest) returns(ImSiteAuthResponse);
}

message ImSiteAuthRequest {
	string site_user_id = 1;		//用户个人ID
	string site_session_id = 2;	//用户认证sessionID
}

message ImSiteAuthResponse {
	string site_server = 1;		//服务站点的地址
//	string device_uid = 2;		//用户设备的uid，客户端直接计算上传，客户端使用
}
