syntax = "proto3";

package site;

option java_package = "com.windchat.proto.server";
option java_outer_classname = "ImSiteHelloProto";

// options for php
option php_namespace = "Akaxin\\Proto\\Site";
// option php_metadata_namespace = "Akaxin\\Proto\\";

/**
 * 接口名<action_name>：
 * 		im.site.hello
 *
 * 功能描述：
 * 		通过hello，获取站点当前版本号，版本号用于客户端与站点之间兼容
 *
 * 支持的错误ID：
 * 		success						//hello成功
 * 		error.alert					//hello失败，显示错误信息
 */
service ImSiteHelloService {
    rpc hello(ImSiteHelloRequest) returns(ImSiteHelloResponse);
}

message ImSiteHelloRequest {
	string client_version = 1;	//客户端版本号
}

message ImSiteHelloResponse {
	string site_version = 1;		//站点端版本号
}
